Fix HTML tag closure in account deletion instructions

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ ListenUp allows users to delete their account and associated personal data direc
     <li>Open the ListenUp app</li>
     <li>Log in with your user account</li>
     <li>Click on <strong>More options menu button</strong> on top right of the landing page</li>
-    <li>You will see options to either log out or <strong>delete account</strong>strong></li>
+    <li>You will see options to either log out or <strong>delete account</strong></li>
     <li>Click on <strong>delete account</strong> and confirm when dialog box appears</li>
 </ol>
 
